Roundcube Webmail SieveRules
============================

2012 11 26
==========
 * Automatically activate first ruleset even when multi rulesets enabled

2012 06 23
==========
 * Add sieverules_load hook

2012 01 21
==========
 * Update after r5781
 * Add inital support for Larry

2012 01 04
==========
 * Update code to use new timezone format (r5707)

2012 01 02
==========
 * Respect settings for html editor from core

2011 12 31
==========
 * Fix display for radio and checkboxes in notify action

2011 12 04
==========
 * Use core function to sanitize input

2011 11 13
==========
 * Fix escaping if lines starting with . in vacation message

2011 10 04
==========
 * Add support for virustest extension

2011 10 03
==========
 * Add HTML editor option for vacation messages

2011 09 24
==========
 * Add plugin hook sieverules_connect

2011 08 28
==========
 * Fix typo, hook name should be sieverules_save

2011 08 24
==========
 * Improve plugin hook sieverules_saved

2011 08 20
==========
 * Add plugin hook sieverules_saved

2011 08 06
==========
 * Improve fileinto :create, now requires mailbox extension

2011 06 19
==========
 * Add button to insert sig into vacation message

2011 05 06
==========
 * Use JQueryUI plugin for dialog box (r4715)

2011 03 12
==========
 * Allow users to enter folder names for fileinto

2011 02 03
==========
 * idn_to_ascii -> rcube_idn_to_ascii (r4484)

2011 01 31
==========
 * Fix double request when clicking on tab using Firefox (from r4472)

2011 01 29
==========
 * Enable :from and :handle options for vaction

2010 10 26
==========
 * Added support for SASL proxy authentication

2010 10 14
==========
 * Automatically import rulesets when auto_load_default is true, multiplerules is false and it is the active ruleset

2010 10 02
==========
 * Add debug logging

2010 09 29
==========
 * Add Internationalized Domain Name (IDNA) support (r4009)

2010 09 19
==========
 * Allow free entry of vacation alias addresses

2010 09 06
==========