@@ -13,8 +13,8 @@
 		<email>roundcube@tehinterweb.co.uk</email>
 		<active>yes</active>
 	</lead>
-	<date>2012-10-20</date>
-	<time>09:05:41</time>
+	<date>2012-11-24</date>
+	<time>11:43:25</time>
 	<version>
 		<release>1.17.1</release>
 		<api>1.17.1</api>
@@ -67,6 +67,7 @@
 			<file name="localization/sl_SI.inc" role="data"/>
 			<file name="localization/sv_SE.inc" role="data"/>
 			<file name="localization/zh_TW.inc" role="data"/>
+			<file name="skins/classic/cross.gif" role="data"/>
 			<file name="skins/classic/help.gif" role="data"/>
 			<file name="skins/classic/icons.gif" role="data"/>
 			<file name="skins/classic/icons.png" role="data"/>
@@ -79,6 +80,8 @@
 			<file name="skins/classic/templates/editsieverule.html" role="data"/>
 			<file name="skins/classic/templates/setupsieverules.html" role="data"/>
 			<file name="skins/classic/templates/sieverules.html" role="data"/>
+			<file name="skins/classic/tick.gif" role="data"/>
+			<file name="skins/larry/cross.png" role="data"/>
 			<file name="skins/larry/help.png" role="data"/>
 			<file name="skins/larry/icons.png" role="data"/>
 			<file name="skins/larry/iehacks.css" role="data"/>
@@ -90,6 +93,7 @@
 			<file name="skins/larry/templates/editsieverule.html" role="data"/>
 			<file name="skins/larry/templates/setupsieverules.html" role="data"/>
 			<file name="skins/larry/templates/sieverules.html" role="data"/>
+			<file name="skins/larry/tick.png" role="data"/>
 		</dir>
 		<!-- / -->
 	</contents>
