@@ -45,7 +45,7 @@
 
 <div id="sieverules-list">
 <div class="sieverules-boxcontent">
-<roundcube:object name="sieveruleslist" />
+<roundcube:object name="sieveruleslist" activeicon="/this/tick.gif" inactiveicon="/this/cross.gif" />
 <roundcube:object name="sieverulesexamplelist" />
 </div>
 <div class="boxfooter">
